--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "jest-localstorage-mock": "^2.4.6",
+    "react-test-renderer": "^17.0.1",
+    "jest-styled-components": "^7.0.3",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
     "react": "^17.0.2",
@@ -24,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
