--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "jest-localstorage-mock": "^2.4.6",
-    "react-test-renderer": "^17.0.1",
-    "jest-styled-components": "^7.0.3",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.1",
+    "jest-localstorage-mock": "^2.4.6",
+    "jest-styled-components": "^7.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-test-renderer": "^17.0.1",
     "sass": "^1.32.12",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest --coverage",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,5 +48,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://api.pluralsight.com:8000"
+  "proxy": "https://api.pluralsight.com:8000",
+  "devDependencies": {
+    "jest": "^26.6.0",
+    "svelte-jester": "^1.5.0"
+  }
 }
