--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "proxy": "https://api.pluralsight.com:8000",
   "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
     "jest": "^26.6.0",
     "svelte-jester": "^1.5.0"
   }
